--- a/07 - Array Cardio Day 2/index-FINISHED.html
+++ b/07 - Array Cardio Day 2/index-FINISHED.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Array Cardio 💪💪</title>
+  <title>Document</title>
 </head>
 <body>
-  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
     // ## Array Cardio Day 2
 
@@ -20,7 +19,7 @@
       { text: 'Love this!', id: 523423 },
       { text: 'Super good', id: 823423 },
       { text: 'You are the best', id: 2039842 },
-      { text: 'Ramen is my fav food ever', id: 123523 },
+      { text: 'Ramen in my fav food ever', id: 123523 },
       { text: 'Nice Nice Nice!', id: 542328 }
     ];
 
